crates/parsing/src/grammar/snapshots/parsing__grammar__tests__non-empty-tail-row.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: ( a :: Int, b :: Int | r )

Start { kind: RowType }
  Token { kind: LeftParenthesis }
  Start { kind: RowInner }
    Start { kind: RowField }
      Start { kind: Name }
        Token { kind: Label }
      Finish
      Token { kind: Colon2 }
      Start { kind: ConstructorType }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
    Token { kind: Comma }
    Start { kind: RowField }
      Start { kind: Name }
        Token { kind: Label }
      Finish
      Token { kind: Colon2 }
      Start { kind: ConstructorType }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
    Start { kind: RowTail }
      Token { kind: Pipe }
      Start { kind: VariableType }
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish
