crates/parsing/src/grammar/snapshots/parsing__grammar__tests__not-qualified-operator.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Invalid.(invalid)

Start { kind: OperatorNameExpression }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Token { kind: LeftParenthesis }
    Start { kind: Error }
      Token { kind: Lower }
      Error { message: "expected an operator" }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish
