crates/parsing/src/grammar/snapshots/parsing__grammar__tests__number-binder.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: 1.0
Start { kind: LiteralBinder }
  Token { kind: LiteralNumber }
Finish
