crates/parsing/src/grammar/snapshots/parsing__grammar__tests__operator-name.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: (+)

Start { kind: OperatorNameType }
  Start { kind: QualifiedName }
    Token { kind: LeftParenthesis }
    Start { kind: NameRef }
      Token { kind: Operator }
    Finish
    Token { kind: RightParenthesis }
  Finish
Finish
