crates/parsing/src/grammar/snapshots/parsing__grammar__tests__parenthesized-binder-negative.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: (-1)
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: NegativeBinder }
    Token { kind: Minus }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish
