crates/parsing/src/grammar/snapshots/parsing__grammar__tests__parenthesized-binder-nested.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: (((1.0)))
Start { kind: ParenthesizedBinder }
  Token { kind: LeftParenthesis }
  Start { kind: ParenthesizedBinder }
    Token { kind: LeftParenthesis }
    Start { kind: ParenthesizedBinder }
      Token { kind: LeftParenthesis }
      Start { kind: LiteralBinder }
        Token { kind: LiteralNumber }
      Finish
      Token { kind: RightParenthesis }
    Finish
    Token { kind: RightParenthesis }
  Finish
  Token { kind: RightParenthesis }
Finish
