crates/parsing/src/grammar/snapshots/parsing__grammar__tests__qualified-constructor-n-arity.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Data.List.Cons 1
Start { kind: ConstructorBinder }
  Start { kind: QualifiedName }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Start { kind: NameRef }
      Token { kind: Upper }
    Finish
  Finish
  Start { kind: ArgumentList }
    Start { kind: LiteralBinder }
      Token { kind: LiteralInteger }
    Finish
  Finish
Finish
