crates/parsing/src/grammar/snapshots/parsing__grammar__tests__qualified-do.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
---
Input: Hello.do
  f x
  let _ = a
  a <- b

Start { kind: DoExpression }
  Start { kind: QualifiedDo }
    Start { kind: QualifiedPrefix }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
      Token { kind: Period }
    Finish
    Token { kind: DoKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: LayoutList }
    Start { kind: DoDiscard }
      Start { kind: ApplicationExpression }
        Start { kind: VariableExpression }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Lower }
            Finish
          Finish
        Finish
        Start { kind: ArgumentList }
          Start { kind: TermArgument }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
    Finish
    Token { kind: LayoutSep }
    Start { kind: DoLetBinding }
      Token { kind: LetKw }
      Token { kind: LayoutStart }
      Start { kind: LayoutList }
        Start { kind: LetBindingPattern }
          Start { kind: WildcardBinder }
            Token { kind: Underscore }
          Finish
          Token { kind: Equal }
          Start { kind: WhereExpression }
            Start { kind: VariableExpression }
              Start { kind: QualifiedName }
                Start { kind: NameRef }
                  Token { kind: Lower }
                Finish
              Finish
            Finish
          Finish
        Finish
      Finish
      Token { kind: LayoutEnd }
    Finish
    Token { kind: LayoutSep }
    Start { kind: DoBind }
      Start { kind: VariableBinder }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
      Token { kind: LeftArrow }
      Start { kind: VariableExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Lower }
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish
